# nturt_bag_recorder

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py  software_development_log.md
app/: bag_decoder.cpp  bag_decoder_node.cpp
include/nturt_bag_recorder/: bag_decoder.hpp  bag_decoder_arg_parser.hpp  csv_writer.hpp
launch/: nturt_bag_record.launch  nturt_bag_recorder.launch
nturt_bag_recorder/: nturt_bag_recorder_node.py
scripts/: merge_and_compress_bag.sh  merge_bag.sh  merge_decode_bag.sh  nturt_bag_receiver_node.py  nturt_bag_recorder.py  nturt_bag_recorder.sh  nturt_bag_recorder_node.py  nturt_bag_uploader_node.py
src/: bag_decoder.cpp  bag_decoder_arg_parser.cpp
test/: test_node.cpp
